  * UX upgrade, when a partial download is cancelled, the entry is removed
    from transfers.
  * UX update on partial download dialog. Includes new text filter.
  * UX fix, Library search now also looks for .torrents on "Torrents" folder.
  * UX fix, Mac OSX file menu does no longer show "Exit" action.
  * Fixes bug, incomplete files are no longer exported to iTunes playlist.
  * UX update, Help Menu now says "Sharing Help".
  * UX bugfix, font size can now be increased.

 -- FrostWire Team <contact@frostwire.com>  Mon, 27 Jun 2011 10:57:00 -0500

frostwire (5.0.4) stable; urgency=high

  * UI upgrade, Create and seed New Torrents.
  * UI upgrade, Ability to throttle torrent transfer speeds
  * UI upgrade, Copy info hash from torrent.
  * UI upgrade, Copy magnet link url from torrent.
  * UI upgrade, Searchable library. Searches recursively downloaded
    files, folders and torrents.
  * UI upgrade, Search results filterable by Torrent Search Engine.
  * UI upgrade, Search results filterable by file size.
  * UI upgrade, Search results filterable by number of seeds.
  * UI upgrade, Search results filterable by keywords as you type.
  * UI upgrade, Ability to download partial files.
  * UI upgrade, Promotional slides can now be switched by the user.
  * UI upgrade and bug fixes on Phone & Tablets tab.
  * UI upgrade, Ability to rebuild "FrostWire" playlist on iTunes.
  * UI upgrade, Replaced legacy skinning code for "Substance" skinning system.
  * Core update, audio playback is now done using mplayer.
  * Core update, Vuze core integration with transfer manager.
    re-written from scratch.
  * Core update, No Gnutella support. Multiple library dependencies gone.

 -- FrostWire Team <contact@frostwire.com>  Fri, 24 Jun 2011 12:00:00 -0500

frostwire (4.21.8) stable; urgency=high

  * Fixes a possible freeze reported by some users when the configuration
    wizard is shown.
  * Fixes issue when a user changes default Gnutella Save Folder